# helios

./: .gitignore  .xinitrc  LICENSE  README.md  TODO.md  config.cpp  config.toml  helios.cpp  logs.txt  main.cpp  meson.build  preview.sh  wm.def.h
.cache/clangd/index/: config.cpp.46D98ACD4BB5F53D.idx  config.h.C61D7FC8A41DA62B.idx  errors.h.94132D4D498539B1.idx  helios.cpp.B73700DB12FEBE8A.idx  helios.h.90D8817D06ADA18C.idx  log.h.D552BDA104D0F489.idx  main.cpp.4BA26ECCBD18437F.idx  spawn.cpp.AB3F464BA0076C93.idx  spawn.h.6C08D0DA1EE06BA7.idx
doc/html/: a00002.html  a00002_source.html  a00003.dot  a00005.html  a00005_source.html  a00006.dot  a00008.html  a00008_source.html  a00009.dot  a00010.dot  a00011.html  a00011_source.html  a00012.dot  a00013.dot  a00014.html  a00014_source.html  a00015.dot  a00016.dot  a00017.html  a00017_source.html  a00019.dot  a00020.html  a00020_source.html  a00021.dot  a00023.html  a00024.html  a00027.html  a00028.html  a00031.html  a00032.html  a00035.html  a00036.html  a00037.dot  a00039.html  a00040.html  a00041.dot  a00043.html  a00044.html  a00045.dot  a00047.html  (+86 more)
doc/html/search/: all_0.js  all_1.js  all_12.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  (+36 more)
docs/: index.html
include/: config.h  config.hpp  error.hpp  helios.h  helios.hpp  key.h  key.hpp  spawn.h  spawn.hpp
src/: config.cpp  helios.cpp  main.cpp
src/include/: config.h  helios.h  key.h  spawn.h
